# snakecpp

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  README.md
cmake/: sfml.cmake  spdlog.cmake
python/: speed_formula.ipynb
src/: engine.cpp  engine.hpp  game.cpp  game.hpp  main.cpp  utils.hpp
